testing/tests/ui/macro_default_value.stderr
error: macro "thrice" expected at least 1 argument, found 0
 --> InvalidDefault1.html:4:2
       "- call thrice() -%}"
 --> tests/ui/macro_default_value.rs:4:21
  |
4 |   #[template(source = "{%- macro thrice(param1, param2=0) -%}
  |  _____________________^
5 | | {{ param1 }} {{ param2 }}
6 | | {%- endmacro -%}
7 | | {%- call thrice() -%}", ext = "html")]
  | |______________________^

error: macro "thrice" expected at least 1 argument, found 3
 --> InvalidDefault2.html:4:2
       "- call thrice(1, 2, 3) -%}"
  --> tests/ui/macro_default_value.rs:11:21
   |
11 |   #[template(source = "{%- macro thrice(param1, param2=0) -%}
   |  _____________________^
12 | | {{ param1 }} {{ param2 }}
13 | | {%- endmacro -%}
14 | | {%- call thrice(1, 2, 3) -%}", ext = "html")]
   | |_____________________________^
